typescript/checker/tests/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature1.ts.stderr
error: Unexpected token Some(DotDotDot)
 --> $DIR/tests/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature1.ts:2:4
  |
2 |   [...a]
  |    ^^^

